changed repo name

--- a/samples/index.html
+++ b/samples/index.html
@@ -49,7 +49,7 @@
 
     <header class="subhead" id="overview">
       <div class="container">
-        <h1>js-mugen</h1>
+        <h1>mugen.js</h1>
         <p class="lead">A simple javascript markup engine
         </p>
       </div>
